--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,17 @@
 .header {
-
+  display: grid;
+  grid-template-columns: 3fr 1fr 3fr;
+  align-items: center;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: Raleway;
+  font-size: 16px;
 }
 
 .menu {
-
+  display: flex;
+  gap: 10px;
+  justify-self: end;
 }
 
 .logo {
@@ -11,7 +19,8 @@
 }
 
 .contacts {
-
+  display: flex;
+  justify-self: center;
 }
 
 .cover {
