--- a/styles/style.css
+++ b/styles/style.css
@@ -3,15 +3,15 @@
 }
 .header {
   display: grid;
-  grid-template-columns: 3fr 1fr 3fr;
+  grid-template-columns: 4fr 1fr 4fr;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
   font-family: Raleway;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .menu {
-
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .logo {
@@ -19,7 +19,9 @@
 }
 
 .contacts {
-  
+  grid-template-columns: 1fr;
+  justify-items: center;
+  gap: auto;
 }
 
 .cover {
