--- a/styles/style.css
+++ b/styles/style.css
@@ -1,129 +1,270 @@
 * {
   box-sizing: border-box;
 }
+
 .header {
   display: grid;
-  grid-template-columns: 4fr 1fr 4fr;
+  grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 10px;
-  font-family: Raleway;
-  font-size: 18px;
+  padding: 92px 50px; 
 }
 
-.menu {
-  grid-template-columns: 1fr 1fr 1fr;
+.header__links-list {
+  display: flex;
+  gap: 32px;
+}
+
+.header__links-list-item {
+  font-size: 18px;
   list-style: circle;
 }
 
-.logo {
-
+.header__links-list-item-no-bullit {
+  list-style: none;
 }
 
-.contacts {
-  grid-template-columns: 1fr;
-  justify-items: center;
-  gap: auto;
+.header__link {
+  border-bottom: 1px solid;
+  text-decoration: none;
+}
+
+.header__link_active {
+  border-bottom: none;
+}
+
+.header__logo {
+  width: 148px;
+}
+
+.address {
+  max-width: 240px;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 1.35;
+}
+
+.header__address {
   justify-self: end;
-  max-width: 400px; /* укажите значение максимальной ширины */
+}
+
+.address a {
+  border-bottom: 1px solid;
+  text-decoration: none;
 }
 
 .cover {
-
+  position: relative;
+  padding: 165px 50px 50px;
+  background-image: url(../images/cover.jpg);
+  background-position: center;
+  background-size: cover;
 }
 
-.title {
-  
+.cover__title {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 135px;
+  color: #fff;
+  font-size: 100px;
+  line-height: 1.15;
+  letter-spacing: 0.3em;
+  text-transform: uppercase;
 }
 
-.description {
- 
+.cover__description {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 78px;
 }
 
-.subline {
-  
+.cover__description-text {
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+  word-spacing: 18px;
 }
 
-.button {
- 
+.overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.aligned-text {
+  display: block;
+  margin-top: 20px;
+  line-height: 1;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+  letter-spacing: initial;
+}
+
+.bet-button {
+  border: 1px solid #fff;
+  padding: 12px 32px;
+  color: #fff;
+  font-weight: normal;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 50px 40px;
+  color: #fff;
+  background-color: #000;
+  background-position: center;
+  background-size: cover;
+}
+
+.card__text {
+  z-index: 1;
+  font-size: 20px;
+}
+
+.card__title {
+  z-index: 1;
+  font-size: 22px;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.lots__cards-list-item {
+  flex-grow: 1;
+  width: 430px;
+  min-height: 450px;
+}
+
+.lots__cards-list {
+  display: flex;
+  flex-wrap: initial;
+  gap: 25px;
+  list-style: none;
 }
 
 .lots {
-  
+  padding: 180px 50px 0;
 }
 
-.frame-1 {
-
+.lots__look-more-link {
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 40px;
+  border-bottom: 1px solid;
+  color: #000;
+  font-size: 20px;
+  text-decoration: none;
 }
 
-.lot-1 {
-
-}
-
-.frame-2 {
-  
-}
-
-.lot-2 {
-
-}
-
-.frame-3 {
-  
-}
-
-.lot-3 {
-
+.lots__heading {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 27px;
+  padding: 0 40px;
 }
 
 .about {
-  
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  justify-content: space-between;
+  gap: 25px;
+  padding: 180px 50px;
 }
 
-.logo-column {
-  
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  margin: auto;
+  border-radius: 50%;
+  background-color: #000;
 }
 
-.about-column {
-  
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+  top: 64px;
+  left: 46.48px;
+}
+
+.about__title {
+  margin: 100px 0;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  font-size: 20px;  
 }
 
 .footer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* три равные колонки */
-  align-items: start;                    /* элементы выравниваются сверху */
-  gap: 20px;
-  padding: 40px 80px;
-  font-family: Raleway, sans-serif;
-  font-size: 14px;
+  grid-template-columns: 1fr min-content 1fr;
+  padding: 0 50px 90px;
 }
 
-.contacts p {
-  margin: 4px 0;
+.footer__menu-link_active {
+  border-bottom: none;
 }
 
-.menu {
+.footer__menu-list {
+  font-size: 18px;
   text-align: center;
-  font-weight: 400px  ;
+  list-style: none;
 }
 
-.menu a {
-  color: #000;
-  text-decoration: underline;
-  display: inline-block;
-  margin-bottom: 6px;
-}
-
-.socials {
-  display: flex;
-  justify-content: flex-end;
-  gap: 12px;
-}
-
-.socials img {
+.footer__social-icon {
   width: 48px;
-  height: 48px;
 }
 
-.socials img:hover {
-  border-color: #000;
+.footer__social-list {
+  display: flex;
+  justify-self: end;
+  gap: 48px;
+  list-style: none;
+  flex-wrap: wrap;
 }
