--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,17 @@
-/* Header */
+* {
+  box-sizing: border-box;
+}
+
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 92px 50px;
+  padding: 92px 50px; 
 }
 
 .header__links-list {
   display: flex;
   gap: 32px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 .header__links-list-item {
@@ -24,7 +24,7 @@
 }
 
 .header__link {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid;
   text-decoration: none;
 }
 
@@ -33,14 +33,7 @@
 }
 
 .header__logo {
-  display: block;
   width: 148px;
-  justify-self: center;
-}
-
-.header__logo-image {
-  width: 100%;
-  height: auto;
 }
 
 .address {
@@ -55,11 +48,10 @@
 }
 
 .address a {
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid;
   text-decoration: none;
 }
 
-/* Cover */
 .cover {
   position: relative;
   padding: 165px 50px 50px;
@@ -68,31 +60,43 @@
   background-size: cover;
 }
 
-.overlay {
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
 .cover__title {
   position: relative;
   z-index: 1;
   margin-bottom: 135px;
   color: #fff;
   font-size: 100px;
-  font-weight: 700;
   line-height: 1.15;
   letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 
-.aligned-text {
-  display: block;
-  line-height: 1.15;
+.cover__description {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 78px;
 }
 
-.aligned-text:not(:first-child) {
+.cover__description-text {
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.aligned-text {
+  display: block;
   margin-top: 20px;
+  line-height: 1;
 }
 
 .aligned-text_center {
@@ -108,61 +112,17 @@
 }
 
 .no-letter-spacing {
-  letter-spacing: 0;
-}
-
-.cover__description {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  gap: 78px;
-}
-
-.cover__description-text {
-  color: #fff;
-  font-size: 22px;
-  font-weight: 400;
-  text-transform: uppercase;
-  word-spacing: 18px;
+  letter-spacing: initial;
 }
 
 .bet-button {
   border: 1px solid #fff;
   padding: 12px 32px;
   color: #fff;
+  font-weight: normal;
   font-size: 22px;
   text-transform: uppercase;
   background-color: transparent;
-  cursor: pointer;
-}
-
-/* Lots */
-.lots {
-  padding: 180px 50px 0;
-}
-
-.lots__heading {
-  font-size: 40px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 27px;
-  padding-left: 40px;
-}
-
-.lots__cards-list {
-  display: flex;
-  gap: 25px;
-  list-style: none;
-  margin: 0 0 30px 0;
-  padding: 0;
-}
-
-.lots__cards-list-item {
-  width: 430px;
-  min-height: 450px;
-  flex-grow: 1;
 }
 
 .card-link {
@@ -179,54 +139,75 @@
   height: 100%;
   padding: 50px 40px;
   color: #fff;
+  background-color: #000;
   background-position: center;
   background-size: cover;
 }
 
-.card__title {
-  position: relative;
-  z-index: 1;
-  font-size: 22px;
-  font-weight: 700;
-  text-decoration: underline;
-  text-transform: uppercase;
-}
-
 .card__text {
-  position: relative;
   z-index: 1;
   font-size: 20px;
-  font-weight: 400;
 }
 
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
+.card__title {
+  z-index: 1;
+  font-size: 22px;
+  text-decoration: underline;
+  text-transform: uppercase;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
 }
 
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
 }
 
+.lots__cards-list-item {
+  flex-grow: 1;
+  width: 430px;
+  min-height: 450px;
+}
+
+.lots__cards-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  list-style: none;
+}
+
+.lots {
+  padding: 180px 50px 0;
+}
+
 .lots__look-more-link {
   display: inline-block;
+  margin-top: 30px;
   margin-left: 40px;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid;
   color: #000;
   font-size: 20px;
   text-decoration: none;
 }
 
-/* About */
+.lots__heading {
+  font-size: 40px;
+  text-transform: uppercase;
+  margin-bottom: 27px;
+  padding: 0 40px;
+}
+
 .about {
   display: grid;
   grid-template-columns: 430px 1fr;
+  justify-content: space-between;
   gap: 25px;
   padding: 180px 50px;
-  align-items: start;
 }
 
 .about__logo {
@@ -235,7 +216,7 @@
   align-items: center;
   width: 240px;
   height: 240px;
-  margin: 0 auto;
+  margin: auto;
   border-radius: 50%;
   background-color: #000;
 }
@@ -243,12 +224,13 @@
 .about__logo-image {
   width: 148px;
   height: 114px;
+  top: 64px;
+  left: 46.48px;
 }
 
 .about__title {
-  margin: 100px 0 100px;
+  margin: 100px 0;
   font-size: 40px;
-  font-weight: 700;
   text-transform: uppercase;
 }
 
@@ -256,37 +238,27 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-  font-size: 20px;
-  font-weight: 400;
+  font-size: 20px;  
 }
 
-/* Footer */
 .footer {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
-  align-items: start;
   padding: 0 50px 90px;
 }
 
-.footer__menu {
-  justify-self: center;
+.footer__menu-link_active {
+  border-bottom: none;
 }
 
 .footer__menu-list {
   font-size: 18px;
   text-align: center;
   list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
-.footer__menu-link {
-  border-bottom: 1px solid #000;
-  text-decoration: none;
-}
-
-.footer__menu-link_active {
-  border-bottom: none;
+.footer__social-icon {
+  width: 48px;
 }
 
 .footer__social-list {
@@ -294,11 +266,5 @@
   justify-self: end;
   gap: 48px;
   list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.footer__social-icon {
-  width: 48px;
-  height: 48px;
+  flex-wrap: wrap;
 }
