--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,8 @@
 
 body {
   min-width: 1100px;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
   font-family: Raleway, sans-serif;
 }
 
@@ -33,6 +34,4 @@ img {
   width: 100%;
 }
 
-button {
-  font: inherit;
-}
+
