--- a/styles/global.css
+++ b/styles/global.css
@@ -6,8 +6,8 @@
 
 body {
   min-width: 1100px;
-  margin: 0;
-  padding: 0;
+  max-width: 1440px;
+  margin: auto;
   font-family: Raleway, sans-serif;
 }
 
@@ -33,5 +33,3 @@ a {
 img {
   width: 100%;
 }
-
-
