--- a/styles/global.css
+++ b/styles/global.css
@@ -6,8 +6,8 @@
 
 body {
   min-width: 1100px;
-  max-width: 1440px;
-  margin: auto;
+  margin: 0;
+  padding: 0;
   font-family: Raleway, sans-serif;
 }
 
