--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,19 @@
-* {
-  box-sizing: border-box;
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 183px;
+}
+
+.content-section {
+  width: 100%;
+  margin: 0 auto;
 }
 
 .header {
   display: grid;
-  grid-template-columns: 1fr min-content 1fr;
+  grid-template-columns: 1.51fr 2fr 1.5fr;
   align-items: center;
-  padding: 92px 50px;
+  padding: 92px 51px 89px;
 }
 
 .header__links-list {
@@ -15,60 +22,112 @@
 }
 
 .header__links-list-item {
-  font-size: 18px;
   list-style: circle;
 }
 
-.header__links-list-item-no-bullit {
+.header__links-list-item_no-bullit {
   list-style: none;
 }
 
 .header__link {
-  border-bottom: 1px solid;
-  text-decoration: none;
+  font-size: 18px;
+  white-space: nowrap;
+}
+
+.text-link:hover {
+  background-color: #000;
+  color: #fff;
 }
 
 .header__link_active {
-  border-bottom: none;
+  text-decoration: none;
 }
 
 .header__logo {
-  width: 148px;
+  display: block;
+  justify-self: center;
+  align-self: center;
+  width: 140px;
+}
+
+.header__logo-image {
+  width: 100%;
 }
 
 .address {
-  max-width: 240px;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 1.35;
+  font-style: inherit;
 }
 
 .header__address {
   justify-self: end;
+  font-style: inherit;
 }
 
-.address a {
-  border-bottom: 1px solid;
-  text-decoration: none;
+.address__item {
+  display: block;
+  font-size: 18px;
+  line-height: 1.35;
+  text-underline-position: under;
+}
+
+.address__address-text {
+  font-size: 18px;
+  line-height: 1.35;
 }
 
 .cover {
   position: relative;
-  padding: 165px 50px 50px;
+  padding: 165px 50px 50px 50px;
   background-image: url(../images/cover.jpg);
-  background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  background-color: #000;
 }
 
 .cover__title {
   position: relative;
   z-index: 1;
-  margin-bottom: 135px;
-  color: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: #FFF;
+  font-weight: bold;
   font-size: 100px;
   line-height: 1.15;
-  letter-spacing: 0.3em;
+  letter-spacing: 30px;
   text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  line-height: 1;
+  text-align: center;
+}
+
+.aligned-text_right {
+  line-height: 1;
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.remove-spacing {
+  letter-spacing: normal;
 }
 
 .cover__description {
@@ -78,57 +137,61 @@
   justify-content: flex-end;
   align-items: center;
   gap: 78px;
+  padding: 136px;
 }
 
 .cover__description-text {
   color: #fff;
   font-size: 22px;
+  line-height: 1.27;
   text-transform: uppercase;
   word-spacing: 18px;
 }
 
-.overlay {
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.aligned-text {
-  display: block;
-  margin-top: 20px;
-  line-height: 1;
-}
-
-.aligned-text_center {
-  text-align: center;
-}
-
-.aligned-text_right {
-  text-align: right;
-}
-
-.letter-spacing-extended {
-  letter-spacing: 0.6em;
-}
-
-.no-letter-spacing {
-  letter-spacing: initial;
-}
-
 .bet-button {
-  border: 1px solid #fff;
-  padding: 12px 32px;
+  border: 1px #fff solid;
+  padding: 14px 32px;
   color: #fff;
+  font-family: 'Raleway', sans-serif;
   font-weight: normal;
   font-size: 22px;
+  line-height: 1;
   text-transform: uppercase;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.bet-button:hover {
+  color: #000;
+  background-color: #fff;
+}
+
+.lots {
+  padding-top: 50px;
+}
+
+.lots__heading {
+  padding: 0 0 30px 40px;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 1;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 25px;
+  list-style: none;
+}
+
+.lost__card-list-item {
+  height: 100%;
 }
 
 .card-link {
   display: block;
   height: 100%;
-  text-decoration: none;
 }
 
 .card {
@@ -136,78 +199,71 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 30px;
+  width: auto;
   height: 100%;
   padding: 50px 40px;
-  color: #fff;
-  background-color: #000;
-  background-position: center;
-  background-size: cover;
-}
-
-.card__text {
-  z-index: 1;
-  font-size: 20px;
-}
-
-.card__title {
-  z-index: 1;
-  font-size: 22px;
-  text-decoration: underline;
-  text-transform: uppercase;
-}
-
-.card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.lots__cards-list-item {
-  flex-grow: 1;
-  width: 430px;
-  min-height: 450px;
+.card__title {
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 1.2;
+  text-decoration-line: underline;
+  text-transform: uppercase;
 }
 
-.lots__cards-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 25px;
-  list-style: none;
-}
-
-.lots {
-  padding: 180px 50px 0;
+.card__text {
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  font-size: 20px;
+  line-height: 1.2;
 }
 
 .lots__look-more-link {
-  display: inline-block;
-  margin-top: 30px;
-  margin-left: 40px;
-  border-bottom: 1px solid;
-  color: #000;
+  display: block;
+  margin: 30px 0 0 40px;
   font-size: 20px;
-  text-decoration: none;
-}
-
-.lots__heading {
-  font-size: 40px;
-  text-transform: uppercase;
-  margin-bottom: 27px;
-  padding: 0 40px;
+  text-decoration-line: underline;
+  text-underline-position: under;
+  width: fit-content;
 }
 
 .about {
   display: grid;
-  grid-template-columns: 430px 1fr;
-  justify-content: space-between;
-  gap: 25px;
-  padding: 180px 50px;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 24px;
+  padding: 0 50px;
+}
+
+.about__column {
+  justify-self: center;
+}
+
+.about__column_text {
+  grid-column: 2 / 4;
 }
 
 .about__logo {
@@ -216,21 +272,19 @@
   align-items: center;
   width: 240px;
   height: 240px;
-  margin: auto;
   border-radius: 50%;
   background-color: #000;
 }
 
 .about__logo-image {
   width: 148px;
-  height: 114px;
-  top: 64px;
-  left: 46.48px;
 }
 
 .about__title {
-  margin: 100px 0;
+  padding: 100px 0 104px;
+  font-weight: bold;
   font-size: 40px;
+  line-height: 1;
   text-transform: uppercase;
 }
 
@@ -238,33 +292,41 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
+}
+
+.about__text p {
   font-size: 20px;
+  line-height: normal;
 }
 
 .footer {
-  display: grid;
-  grid-template-columns: 1fr min-content 1fr;
-  padding: 0 50px 183px;
+  display: flex;
+  justify-content: space-between;
+  padding: 180px 50px 80px;
 }
 
-.footer__menu-link_active {
-  border-bottom: none;
+.footer__social-icon {
+  width: auto;
+  height: 48px;
 }
 
 .footer__menu-list {
-  font-size: 18px;
   text-align: center;
   list-style: none;
 }
 
-.footer__social-icon {
-  width: 48px;
+.footer__menu-link {
+  font-size: 18px;
+  line-height: normal;
+  text-underline-position: under;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
 }
 
 .footer__social-list {
   display: flex;
-  justify-self: end;
   gap: 48px;
   list-style: none;
-  flex-wrap: wrap;
 }
