--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,8 @@
 
 body {
   min-width: 1100px;
-  margin: 0;
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 0;
   font-family: Raleway, sans-serif;
 }
