--- a/styles/style.css
+++ b/styles/style.css
@@ -149,9 +149,7 @@
 }
 
 .lot_title {
-  color: white;
-  font-size: 22px;
-  font-weight: 700;
+
   line-height: 120%;
   text-decoration-line: underline;
   text-transform: uppercase;
@@ -163,13 +161,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
-}
 
-.view_more_link {
-  display: block;
-  text-underline-offset: 3px;
-  padding-top: 30px;
-  color: black;
   font-size: 20px;
   font-weight: 400;
   line-height: 23.48px;
@@ -180,27 +172,32 @@
   position: relative;
   background-image: url(../images/cover.jpg);
   background-size: cover;
-  color: white;
-  text-transform: uppercase;
-  z-index: 0;
-  background-repeat: no-repeat;
-  background-position: center;
-}
 
 .overlay_layer {
   top: 0;
   left: 0;
-
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
   height: 100%;
   z-index: -1;
 }
 
 .cover_heading {
-
+  display: flex;
+  flex-direction: column;
+  padding: 165px 50px 147px;
+  gap: 20px;
 }
 
 .cover_word {
-
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 100%;
+  letter-spacing: 30px;
+  position: relative;
 }
 
 .cover_center {
