--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,9 @@
 }
 
 .lot_title {
-
+  color: white;
+  font-size: 22px;
+  font-weight: 700;
   line-height: 120%;
   text-decoration-line: underline;
   text-transform: uppercase;
@@ -161,7 +163,13 @@
   font-style: normal;
   font-weight: 400;
   line-height: 120%;
+}
 
+.view_more_link {
+  display: block;
+  text-underline-offset: 3px;
+  padding-top: 30px;
+  color: black;
   font-size: 20px;
   font-weight: 400;
   line-height: 23.48px;
@@ -172,6 +180,9 @@
   position: relative;
   background-image: url(../images/cover.jpg);
   background-size: cover;
+  color: white;
+  background-position: center;
+}
 
 .overlay_layer {
   top: 0;
@@ -185,12 +196,6 @@
   z-index: -1;
 }
 
-.cover_heading {
-  display: flex;
-  flex-direction: column;
-  padding: 165px 50px 147px;
-  gap: 20px;
-}
 
 .cover_word {
   font-size: 100px;
@@ -236,6 +241,7 @@
   border: 1px solid white;
   background-color: transparent;
   font-family: "Raleway", sans-serif;
+
   text-align: center;
 }
 
