--- a/styles/style.css
+++ b/styles/style.css
@@ -167,6 +167,12 @@
 
 .view_more_link {
   display: block;
+  text-underline-offset: 3px;
+  padding-top: 30px;
+  color: black;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
   margin-left: 64px;
 }
 
@@ -175,6 +181,9 @@
   background-image: url(../images/cover.jpg);
   background-size: cover;
   color: white;
+  text-transform: uppercase;
+  z-index: 0;
+  background-repeat: no-repeat;
   background-position: center;
 }
 
@@ -190,6 +199,12 @@
   z-index: -1;
 }
 
+.cover_heading {
+  display: flex;
+  flex-direction: column;
+  padding: 165px 50px 147px;
+  gap: 20px;
+}
 
 .cover_word {
   font-size: 100px;
@@ -207,6 +222,9 @@
 
 .cover_right {
   align-self: flex-end;
+  position: relative;
+  top: 15px;
+  left: 30px;
 }
 
 .letter_spacing {
@@ -220,6 +238,9 @@
 .cover_info {
   display: flex;
   align-items: baseline;
+  justify-content: space-evenly;
+  padding: 0px 50px 55px 78px;
+  gap: 79px;
 }
 
 .cover_desc {
@@ -235,7 +256,10 @@
   border: 1px solid white;
   background-color: transparent;
   font-family: "Raleway", sans-serif;
-
+  color: #fff;
+  font-size: 22px;
+  line-height: 51px;
+  font-weight: 500;
   text-align: center;
 }
 
@@ -247,15 +271,6 @@
   padding-left: 24px;
   padding-bottom: 92px;
   padding-right: 24px;
-}
-
-.hdr_nav {
-
-.nav_list {
-  display: flex;
-  gap: 32px;
-  list-style-type: circle;
-  padding-right: 7px;
 }
 
 .nav_item {
@@ -272,6 +287,10 @@
   text-decoration: none;
 }
 
+.hdr_logo {
+  width: 148px;
+  height: 105px;
+}
 
 .addr_list {
   padding-left: 185px;
@@ -283,8 +302,7 @@
 }
 
 .addr_phone {
-  text-decoration: underline;
-  text-underline-offset: 4px;
+
 }
 
 .addr_street {
